--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "preact-vite",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "pnpm pretty && pnpm lint && vite",
     "build": "cross-env NODE_ENV=production vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "pretty": "prettier -w -u src/**",
+    "lint": "eslint --ext .ts,tsx src/** --fix"
   },
   "dependencies": {
+    "@preact/preset-vite": "^2.0.0",
+    "cross-env": "^7.0.3",
     "preact": "^10.5.13",
     "preact-async-route": "^2.2.1",
-    "preact-router": "^3.2.1"
-  },
-  "devDependencies": {
-    "@preact/preset-vite": "^2.0.0",
-    "@prefresh/vite": "^2.2.3",
-    "cross-env": "^7.0.3",
-    "typescript": "^4.3.2",
+    "preact-router": "^3.2.1",
     "vite": "^2.6.4",
     "vite-plugin-windicss": "^1.4.11",
     "windicss": "^3.1.9"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-preact": "^1.1.4",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   }
 }
