--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "preact-vite",
   "version": "0.0.0",
   "scripts": {
-    "dev": "pnpm pretty && pnpm lint && vite",
+    "dev": "vite",
     "build": "cross-env NODE_ENV=production vite build",
     "serve": "vite preview",
     "pretty": "prettier -w -u src/**",
-    "lint": "eslint --ext .ts,tsx src/** --fix"
+    "lint": "eslint --ext .ts,tsx src/** --fix",
+    "test": "jest"
   },
   "dependencies": {
     "@preact/preset-vite": "^2.0.0",
@@ -19,11 +20,18 @@
     "windicss": "^3.1.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/preact": "^2.0.1",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-preact": "^1.1.4",
     "eslint-config-prettier": "^8.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.5",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "ts-jest": "^27.0.6"
   }
 }
